--- a/OpenGLTests.vcxproj.filters
+++ b/OpenGLTests.vcxproj.filters
@@ -19,12 +19,18 @@
     <ClCompile Include="MainBlock.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GlorvGEV1\GlorvMath.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GlorvGEV1\GlorvGE_BaseV1.h">
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="GlorvGEV1\GlorvShapesV1.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GlorvGEV1\GlorvMath.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
