--- a/OpenGLTests.vcxproj.filters
+++ b/OpenGLTests.vcxproj.filters
@@ -34,4 +34,12 @@
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="GlorvGEV1\shaders\FragSource.glsl">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="GlorvGEV1\shaders\VectSource.glsl">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
