--- a/OpenGLTests.vcxproj
+++ b/OpenGLTests.vcxproj
@@ -152,12 +152,14 @@
     <ClCompile Include="GlorvGEV1\GlorvGE_BaseV1.c" />
     <ClCompile Include="GlorvGEV1\GlorvMath.c" />
     <ClCompile Include="GlorvGEV1\GlorvShapesV1.c" />
+    <ClCompile Include="GlorvGEV1\linearAlg.c" />
     <ClCompile Include="MainBlock.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GlorvGEV1\GlorvGE_BaseV1.h" />
     <ClInclude Include="GlorvGEV1\GlorvMath.h" />
     <ClInclude Include="GlorvGEV1\GlorvShapesV1.h" />
+    <ClInclude Include="GlorvGEV1\linearAlg.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="GlorvGEV1\shaders\FragSource.glsl" />
